--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,7 @@ footer:
       # url:
       - label: 'GitHub'
         icon: 'fab fa-fw fa-github'
-        url: https://github.com/riowner
+        url: https://github.com/1000-5-0
       # - label: 'GitLab'
       #   icon: 'fab fa-fw fa-gitlab'
       #   url:
